--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,6 @@ __pycache__/
 # C extensions
 *.so
 
-data/
-wandb/
-tmp/
-.DS_Store
-
 # Distribution / packaging
 .Python
 build/
@@ -210,3 +205,18 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Project specific
+data/
+wandb/
+tmp/
+.DS_Store
+annotations.csv
+images/
+output/
+
+# Session keys
+.sesskey
+
+# Claude
+.claude/
