--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.11"
 dependencies = [
     "python-fasthtml>=0.4.0",
     "pyyaml>=6.0",
+    "simple-parsing>=0.1.7",
     "starlette>=0.37.0",
 ]
